feat Frontend(competition): Implementa CRUD completo de Técnicos Designados e Competição, Etags | fix Backend(Config): cacheControl liberado para ETags